update speeding function

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="snake.css">
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <title>Snake Game</title>
     </head>
     <body>
     <canvas id="canvas" width="400" height="400"></canvas>
+    <br>
+    <span class="fa fa-2x fa-arrow-up"></span>
+    <span class="fa fa-2x fa-arrow-down"></span>
+    <span class="fa fa-2x fa-arrow-left"></span>
+    <span class="fa fa-2x fa-arrow-right"></span>
     <br>
     <button>Restart</button>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
